force-app/main/default/objects/Account_Phone_Number_Series__c/Account_Phone_Number_Series__c.object-meta.xml
<CustomObject>
    <description>Represents a series of phone numbers attached to a CVR account. (DKT-45211)</description>
    <label>Account Phone Number Series</label>
    <nameField>
        <displayFormat>APNS-{000000000}</displayFormat>
        <label>Account Phone Number Series Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Phone Number Series</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>