force-app/main/default/objects/Account_Phone_Number_Series__c/fields/CVR__c.field-meta.xml
<CustomField>
    <fullName>CVR__c</fullName>
    <label>CVR</label>
    <length>8</length>
    <type>Text</type>
</CustomField>