force-app/main/default/objects/Account_Phone_Number_Series__c/fields/Number_Group__c.field-meta.xml
<CustomField>
    <fullName>Number_Group__c</fullName>
    <label>Number Group</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>SAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>