force-app/main/default/objects/Account_Phone_Number_Series__c/fields/Number_Location__c.field-meta.xml
<CustomField>
    <fullName>Number_Location__c</fullName>
    <label>Number Location</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BRZ</fullName>
            </value>
            <value>
                <fullName>BUS</fullName>
            </value>
            <value>
                <fullName>EKC</fullName>
            </value>
            <value>
                <fullName>GOL</fullName>
            </value>
            <value>
                <fullName>SAL</fullName>
            </value>
            <value>
                <fullName>SIL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>