force-app/main/default/objects/Account_Phone_Number_Series__c/fields/Number_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Number_Pattern__c</fullName>
    <label>Number Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>