force-app/main/default/objects/Account_Phone_Number_Series__c/fields/NumberKey__c.field-meta.xml
<CustomField>
    <fullName>NumberKey__c</fullName>
    <label>NumberKey</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>