force-app/main/default/objects/Account_Phone_Number_Series__c/fields/Open_Number_Series__c.field-meta.xml
<CustomField>
    <fullName>Open_Number_Series__c</fullName>
    <description>Value is based on combo of multiple fields on the object.</description>
    <formula>AND( 
 

ISPICKVAL(Number_Group__c, &apos;P&apos;), 
 

ISPICKVAL(Number_Location__c, &apos;EKC&apos; ),


ISPICKVAL( Product_Type__c , &apos;GSM&apos; )

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Number Series</label>
    <type>Checkbox</type>
</CustomField>