force-app/main/default/objects/Account_Phone_Number_Series__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>FIX</fullName>
                <isActive>false</isActive>
                <label>FIX</label>
            </value>
            <value>
                <fullName>GSM</fullName>
            </value>
            <value>
                <fullName>MSC</fullName>
                <isActive>false</isActive>
                <label>MSC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>