force-app/main/default/objects/Account_Phone_Number_Series__c/fields/Range_Errors__c.field-meta.xml
<CustomField>
    <fullName>Range_Errors__c</fullName>
    <description>Roll up summary counting how many Account Phone Number Assignments with Phone Number Reservation Status ERROR</description>
    <label>Range Errors</label>
    <summaryFilterItems>
        <field>Account_Phone_Number_Assignment__c.Phone_Number_Reservation_Status__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </summaryFilterItems>
    <summaryForeignKey>Account_Phone_Number_Assignment__c.Account_Phone_Number_Series__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>